--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     </header>
     <figure></figure>
     <main>
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="customers">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Wooden desk with stationary and a notebook on it. The notebook has a mindmap on it." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="customers">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Man on a laptop that's displaying data with bar graphs and pie charts" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="customers">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="six people sat at a table that has media icons on it" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -49,21 +49,21 @@
         </section>
     </main>
     <aside>
-        <section class="benefit-lead">
+        <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Half a gear on top of a funnel with an arrow inside pointing down to a dollar sign in a circle" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="A shirt and tie with a lighbulb for a head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="A gear with three dollar signs in circles around it" />
             <p>
